--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,8 @@ configure(allprojects) { project ->
 			mavenBom "org.jetbrains.kotlin:kotlin-bom:1.3.50"
 			mavenBom "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.3.2"
 			mavenBom "org.junit:junit-bom:5.5.2"
+//			mavenBom "org.apache.commons:commons-dbcp2"
+			mavenBom "commons-dbcp:commons-dbcp:1.4"
 		}
 		dependencies {
 			dependencySet(group: 'org.apache.logging.log4j', version: '2.12.1') {
@@ -429,3 +431,12 @@ configure(rootProject) {
 		}
 	}
 }
+dependencies {
+	// https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp
+	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
+	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
+	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+
+}
+
+
