--- a/spring-jdbc/spring-jdbc.gradle
+++ b/spring-jdbc/spring-jdbc.gradle
@@ -14,4 +14,6 @@ dependencies {
 	optional("org.apache.derby:derbyclient")
 	optional("org.jetbrains.kotlin:kotlin-reflect")
 	optional("org.jetbrains.kotlin:kotlin-stdlib")
+	compile("commons-dbcp:commons-dbcp:1.4")
+	compile("mysql:mysql-connector-java:8.0.18")
 }
