feat: 1. 新增Mybatis和Spring的配置 2. 新增事务相关配置

--- a/build.gradle
+++ b/build.gradle
@@ -436,6 +436,10 @@ dependencies {
 	compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.4'
 	// https://mvnrepository.com/artifact/mysql/mysql-connector-java
 	compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.18'
+	// https://mvnrepository.com/artifact/org.mybatis/mybatis
+	compile group: 'org.mybatis', name: 'mybatis', version: '3.5.3'
+	// https://mvnrepository.com/artifact/org.mybatis/mybatis-spring
+	compile group: 'org.mybatis', name: 'mybatis-spring', version: '2.0.3'
 
 }
 
